Fixed a docker issue

--- a/precision-receipt-complete/backend/Dockerfile
+++ b/precision-receipt-complete/backend/Dockerfile
@@ -1,35 +1,41 @@
+# Backend Dockerfile
 FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
+# Environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
-# System dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
     libpq-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Python dependencies
+# Copy Python dependencies
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# App code
+# Copy application code
 COPY . .
 
-# Runtime dirs
+# Create runtime directories
 RUN mkdir -p logs uploads
 
+# Expose the backend port
 EXPOSE 8000
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD python - <<EOF
-import requests
-requests.get("http://localhost:8000/health", timeout=5)
-EOF
+# Valid Docker healthcheck
+HEALTHCHECK --interval=30s --timeout=5s --start-period=40s --retries=3 \
+  CMD curl -f http://localhost:8000/health || exit 1
 
+# Run the backend server
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
